--- a/environment.yml
+++ b/environment.yml
@@ -35,12 +35,14 @@ dependencies:
   - keras-preprocessing=1.1.0
   - libsodium=1.0.16
   - markdown=3.1.1
+  - matplotlib
   - mistune=0.8.4
   - more-itertools=8.0.2
   - nbconvert=5.6.0
   - nbformat=4.4.0
   - numpydoc=0.9.1
   - olefile=0.46
+  - opencv==4.3.0
   - packaging=19.2
   - pandas=1.0.3
   - pandocfilters=1.4.2
@@ -85,6 +87,7 @@ dependencies:
   - testpath=0.4.2
   - tk=8.6.8
   - toml=0.10.0
+  - tqdm
   - ujson=1.35
   - wcwidth=0.1.7
   - webencodings=0.5.1
