--- a/environment.yml
+++ b/environment.yml
@@ -42,7 +42,7 @@ dependencies:
   - nbformat=4.4.0
   - numpydoc=0.9.1
   - olefile=0.46
-  - opencv==4.3.0
+  - opencv-python
   - packaging=19.2
   - pandas=1.0.3
   - pandocfilters=1.4.2
