--- a/environment.yml
+++ b/environment.yml
@@ -42,7 +42,6 @@ dependencies:
   - nbformat=4.4.0
   - numpydoc=0.9.1
   - olefile=0.46
-  - opencv-python
   - packaging=19.2
   - pandas=1.0.3
   - pandocfilters=1.4.2
@@ -98,3 +97,5 @@ dependencies:
   - zipp=0.6.0
   - zlib=1.2.11
   - zstd=1.3.7
+  - pip:
+    - opencv-python
