--- a/environment.yml
+++ b/environment.yml
@@ -48,6 +48,7 @@ dependencies:
   - parso=0.5.2
   - pathtools=0.1.2
   - pickleshare=0.7.5
+  - pip
   - pipfile=0.0.2
   - prometheus_client=0.7.1
   - prompt_toolkit=2.0.10
@@ -99,3 +100,4 @@ dependencies:
   - zstd=1.3.7
   - pip:
     - opencv-python
+    - keras
