--- a/environment.yml
+++ b/environment.yml
@@ -35,6 +35,7 @@ dependencies:
   - keras-preprocessing=1.1.0
   - libsodium=1.0.16
   - markdown=3.1.1
+  - matplotlib
   - mistune=0.8.4
   - more-itertools=8.0.2
   - nbconvert=5.6.0
@@ -42,10 +43,12 @@ dependencies:
   - numpydoc=0.9.1
   - olefile=0.46
   - packaging=19.2
+  - pandas=1.0.3
   - pandocfilters=1.4.2
   - parso=0.5.2
   - pathtools=0.1.2
   - pickleshare=0.7.5
+  - pip
   - pipfile=0.0.2
   - prometheus_client=0.7.1
   - prompt_toolkit=2.0.10
@@ -94,3 +97,7 @@ dependencies:
   - zipp=0.6.0
   - zlib=1.2.11
   - zstd=1.3.7
+  - pip:
+    - opencv-python
+    - keras  
+ 
