--- a/environment.yml
+++ b/environment.yml
@@ -71,6 +71,7 @@ dependencies:
   - qtpy=1.9.0
   - rope=0.14.0
   - rtree=0.8.3
+  - scikit-learn
   - send2trash=1.5.0
   - sip=4.19.8
   - six=1.12.0
