--- a/environment.yml
+++ b/environment.yml
@@ -4,100 +4,12 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - alabaster=0.7.12
-  - astor=0.8.0
-  - atomicwrites=1.3.0
-  - attrs=19.2.0
-  - autopep8=1.4.4
-  - babel=2.7.0
-  - backcall=0.1.0
-  - blas=1.0
-  - bleach=3.1.0
-  - chardet=3.0.4
-  - cloudpickle=1.2.2
-  - colorama=0.4.1
-  - cycler=0.10.0
-  - decorator=4.4.0
-  - defusedxml=0.6.0
-  - diff-match-patch=20181111
-  - freetype=2.9.1
-  - grpcio=1.16.1
-  - hdf5=1.10.4
-  - icu=58.2
-  - idna=2.8
-  - imagesize=1.1.0
-  - intervaltree=3.0.2
-  - ipython_genutils=0.2.0
-  - jinja2=2.10.3
-  - joblib=0.14.0
-  - jpeg=9b
   - keras-applications=1.0.8
   - keras-preprocessing=1.1.0
-  - libsodium=1.0.16
-  - markdown=3.1.1
   - matplotlib
-  - mistune=0.8.4
-  - more-itertools=8.0.2
-  - nbconvert=5.6.0
-  - nbformat=4.4.0
-  - numpydoc=0.9.1
-  - olefile=0.46
-  - packaging=19.2
-  - pandas=1.0.3
-  - pandocfilters=1.4.2
-  - parso=0.5.2
-  - pathtools=0.1.2
-  - pickleshare=0.7.5
+  - pandas
   - pip
-  - pipfile=0.0.2
-  - prometheus_client=0.7.1
-  - prompt_toolkit=2.0.10
-  - pycodestyle=2.5.0
-  - pycparser=2.19
-  - pydocstyle=4.0.1
-  - pyflakes=2.1.1
-  - pygments=2.4.2
-  - pympler=0.7
-  - pynacl=1.3.0
-  - pyparsing=2.4.2
-  - pyqt=5.9.2
-  - python-dateutil=2.8.0
-  - python-jsonrpc-server=0.3.2
-  - pytz=2019.3
-  - qdarkstyle=2.7
-  - qt=5.9.7
-  - qtawesome=0.6.0
-  - qtconsole=4.6.0
-  - qtpy=1.9.0
-  - rope=0.14.0
-  - rtree=0.8.3
-  - send2trash=1.5.0
-  - sip=4.19.8
-  - six=1.12.0
-  - snowballstemmer=2.0.0
-  - sortedcontainers=2.1.0
-  - sphinx=2.2.1
-  - sphinxcontrib-applehelp=1.0.1
-  - sphinxcontrib-devhelp=1.0.1
-  - sphinxcontrib-htmlhelp=1.0.2
-  - sphinxcontrib-jsmath=1.0.1
-  - sphinxcontrib-qthelp=1.0.2
-  - sphinxcontrib-serializinghtml=1.1.3
-  - termcolor=1.1.0
-  - testpath=0.4.2
-  - tk=8.6.8
-  - toml=0.10.0
-  - tqdm
-  - ujson=1.35
-  - wcwidth=0.1.7
-  - webencodings=0.5.1
-  - werkzeug=0.16.0
-  - xz=5.2.4
-  - yaml=0.1.7
-  - yapf=0.28.0
-  - zipp=0.6.0
-  - zlib=1.2.11
-  - zstd=1.3.7
+  - tensorflow
   - pip:
     - opencv-python
     - keras
